--- a/app/src/main/res/drawable/bg_dotted_round_purple.xml
+++ b/app/src/main/res/drawable/bg_dotted_round_purple.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimaryDark"
+        android:color="@color/border_gray"
         android:dashWidth="8dp"
         android:dashGap="6dp" />
     <padding
