--- a/app/src/main/res/layout/fragment_import_portfolio.xml
+++ b/app/src/main/res/layout/fragment_import_portfolio.xml
@@ -21,12 +21,14 @@
         android:elevation="@dimen/space_2"
         android:paddingBottom="@dimen/_20sdp"
         android:paddingTop="@dimen/default_space"
+        android:overScrollMode="never"
         android:paddingStart="@dimen/default_space"
         android:paddingEnd="@dimen/default_space">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:overScrollMode="never"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="Steps to follow"
+                    android:text="@string/steps_to_follow"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_19ssp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="1. Select Detailed in Statment Type"
+                    android:text="@string/select_detail"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="2. Select Specific Period"
+                    android:text="@string/select_specific"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="3. Select 01-Jan-1990 in From Date"
+                    android:text="@string/select_from_date"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +120,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="4. Select With Zero balance folios"
+                    android:text="@string/select_zero_balance"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="5. Enter your email address"
+                    android:text="@string/enter_your_email_address"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -162,7 +164,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="6. Enter password as your PAN number (in UPPER CASE), confirm the same password and hit Submit"
+                    android:text="@string/enter_pan_password"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -182,12 +184,12 @@
                     android:id="@+id/tvInSometime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_9sdp"
-                    android:fontFamily="@font/lato_regular"
-                    android:text="In sometime..."
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/in_some_time"
                     android:textColor="@color/black"
                     android:textStyle="italic"
-                    android:textSize="@dimen/_8ssp"
+                    android:textSize="@dimen/_10ssp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/ivStep6" />
 
@@ -197,7 +199,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="7. You will receive an email from CAMS with your CAS. Please forward the email to cas@tarrakki.com"
+                    android:text="@string/receive_email"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -209,7 +211,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:fontFamily="@font/lato_regular"
-                    android:text="8. Login to Tarrakki to see your updated portfolio."
+                    android:text="@string/login_to_tarrakki"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13ssp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -219,7 +221,7 @@
                 <Button
                     android:layout_marginTop="@dimen/_16sdp"
                     app:layout_constraintTop_toBottomOf="@+id/tvStep8"
-                    android:id="@+id/btnLogout"
+                    android:id="@+id/btnCamsWebsite"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_btn_purple"
