--- a/app/src/main/res/layout/fragment_all_investmnet.xml
+++ b/app/src/main/res/layout/fragment_all_investmnet.xml
@@ -29,6 +29,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:paddingBottom="@dimen/_45sdp"
                 android:layout_height="match_parent">
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -52,7 +53,7 @@
                     android:text="@string/how_are_returns_calculated"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/colorAccent"
-                    android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}" />
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/tvWhen"
@@ -61,12 +62,27 @@
                     android:layout_below="@id/tvHowReturns"
                     android:layout_marginStart="@dimen/space_16"
                     android:layout_marginEnd="@dimen/space_16"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="@dimen/_6sdp"
                     android:layout_marginBottom="@dimen/space_16"
                     android:fontFamily="@font/lato_semibold"
                     android:text="@string/when_does_my_portfolio_update_here"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/colorAccent"
+                    android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}" />
+
+                <TextView
+                    android:id="@+id/tvNote"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tvWhen"
+                    android:layout_marginStart="@dimen/space_16"
+                    android:layout_marginTop="@dimen/_4sdp"
+                    android:layout_marginEnd="@dimen/space_16"
+                    android:layout_marginBottom="@dimen/space_16"
+                    android:autoLink="web"
+                    android:text="@string/redeem_disclaimer"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/notes_color"
                     android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}" />
 
 
@@ -123,7 +139,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:src="@drawable/ic_import_portfolio"
-                android:layout_width="@dimen/_120sdp"
+                android:layout_width="@dimen/_140sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
                 android:layout_height="wrap_content"/>
 
