--- a/app/src/main/res/drawable/ic_upload_cas.xml
+++ b/app/src/main/res/drawable/ic_upload_cas.xml
@@ -1,26 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="10.047dp"
-    android:height="10.048dp"
-    android:viewportWidth="10.047"
-    android:viewportHeight="10.048">
+    android:width="33dp"
+    android:height="33dp"
+    android:viewportWidth="33"
+    android:viewportHeight="33">
   <path
-      android:pathData="M9.547,6.532v2.011a1,1 0,0 1,-1.005 1.005L1.505,9.548A1,1 0,0 1,0.5 8.543L0.5,6.532"
+      android:pathData="M29.351,20.7829v5.711a2.855,2.855 0,0 1,-2.855 2.855L6.506,29.3489A2.855,2.855 0,0 1,3.651 26.4939L3.651,20.7829"
       android:strokeLineJoin="round"
-      android:strokeWidth="1"
+      android:strokeWidth="2"
       android:fillColor="#00000000"
       android:strokeColor="#fff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M7.537,3.013 L5.024,0.5 2.511,3.013"
+      android:pathData="M23.638,10.7889 L16.5,3.6509 9.362,10.7889"
       android:strokeLineJoin="round"
-      android:strokeWidth="1"
+      android:strokeWidth="2"
       android:fillColor="#00000000"
       android:strokeColor="#fff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M5.024,0.5v6.032"
+      android:pathData="M16.5,3.6509L16.5,20.7829"
       android:strokeLineJoin="round"
-      android:strokeWidth="1"
+      android:strokeWidth="2"
       android:fillColor="#00000000"
       android:strokeColor="#fff"
       android:strokeLineCap="round"/>
