--- a/app/src/main/res/layout/dialog_redeem_portfolio.xml
+++ b/app/src/main/res/layout/dialog_redeem_portfolio.xml
@@ -100,7 +100,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_8"
-            android:text="Do you want to amount-redeem?"
+            android:text="Would you like to redeem by?"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintTop_toTopOf="@id/switchOnOff"
@@ -109,6 +109,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <ToggleButton
+            android:visibility="invisible"
             android:id="@+id/switchOnOff"
             android:layout_width="64dp"
             android:layout_height="24dp"
@@ -123,6 +124,48 @@
             app:layout_constraintTop_toBottomOf="@id/edtChooseFolio"
             tools:checked="false" />
 
+
+        <RadioGroup
+            android:layout_marginTop="@dimen/_10sdp"
+            android:id="@+id/rgTicketType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_edt_gray_round"
+            android:elevation="2dp"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvCertificate">
+
+            <RadioButton
+                android:id="@+id/rbUnits"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/redeem_amount_bg_selector"
+                android:button="@null"
+                android:checked="true"
+                android:gravity="center"
+                android:padding="@dimen/_8sdp"
+                android:text="Units"
+                android:textColor="@color/view_redeem_selector" />
+
+            <RadioButton
+                android:id="@+id/rbAmount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/redeem_amount_bg_selector"
+                android:button="@null"
+                android:gravity="center"
+                android:padding="@dimen/_8sdp"
+                android:text="Amounts"
+                android:textColor="@color/view_redeem_selector" />
+
+        </RadioGroup>
+
+
         <TextView
             android:id="@+id/tvLumpsum"
             android:layout_width="wrap_content"
@@ -132,7 +175,7 @@
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvCertificate"
+            app:layout_constraintTop_toBottomOf="@id/rgTicketType"
             tools:text="@string/total_units" />
 
         <EditText
