--- a/app/src/main/res/layout/fragment_all_investmnet.xml
+++ b/app/src/main/res/layout/fragment_all_investmnet.xml
@@ -18,6 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:theme="@style/AppThemeMaterial"
             android:layout_height="match_parent">
 
 
@@ -100,9 +101,18 @@
 
         </androidx.core.widget.NestedScrollView>
 
+            <com.github.mmin18.widget.RealtimeBlurView
+                android:id="@+id/blurView"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:realtimeBlurRadius="2dp"
+                app:realtimeOverlayColor="#413A3A3A" />
+
 
             <org.supportcompact.customefloatingmenu.OneMoreFabMenu
                 android:id="@+id/fab"
+
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -124,6 +134,7 @@
                 app:expanded_drawable="@drawable/bg_blur_investment" />
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/ivAddRound"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -142,6 +153,25 @@
                 android:layout_width="@dimen/_145sdp"
                 android:layout_marginEnd="@dimen/_8sdp"
                 android:layout_height="wrap_content"/>
+
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/extFab"
+                android:visibility="gone"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_15sdp"
+                app:backgroundTint="@color/colorPrimaryDark"
+                android:text="Import Portfolio"
+                android:minHeight="56dp"
+                android:textAllCaps="false"
+                app:iconTint="@color/white"
+                android:layout_marginBottom="@dimen/_13sdp"
+                android:textColor="@android:color/white"
+                app:icon="@drawable/ic_add_button_white"/>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
