--- a/app/src/main/res/layout/fragment_import_funds.xml
+++ b/app/src/main/res/layout/fragment_import_funds.xml
@@ -20,15 +20,12 @@
        >
 
         <androidx.core.widget.NestedScrollView
-            android:paddingBottom="@dimen/_20sdp"
-            android:paddingTop="@dimen/default_space"
+            android:paddingBottom="@dimen/_10sdp"
             android:paddingStart="@dimen/default_space"
             android:paddingEnd="@dimen/default_space"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
             android:layout_width="match_parent"
             android:overScrollMode="never"
-            android:layout_height="0dp" >
+            android:layout_height="match_parent" >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -38,10 +35,11 @@
 
                 <TextView
                     android:id="@+id/tvStepsCAS"
-                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
                     android:textColor="@color/black"
-                    android:fontFamily="@font/poppins"
+                    android:fontFamily="@font/lato_regular"
                     android:textSize="@dimen/_10ssp"
+                    android:gravity="center"
                     app:layout_constraintTop_toTopOf="parent"
                     android:text="@string/steps_to_get_cas"
                     app:layout_constraintStart_toStartOf="parent"
@@ -64,9 +62,9 @@
                     app:layout_constraintStart_toEndOf="@+id/ivVisitCAMS"
                     android:layout_marginStart="@dimen/_12sdp"
                     android:text="@string/visit_cams_websites"
-                    android:fontFamily="@font/poppins"
+                    android:fontFamily="@font/lato_regular"
                     android:textStyle="italic"
-                    android:textSize="@dimen/_11ssp"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/equity_fund_color"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -80,8 +78,8 @@
                     app:layout_constraintTop_toBottomOf="@+id/tvVisitCAMS"
                     app:layout_constraintStart_toStartOf="@+id/tvVisitCAMS"
                     android:text="@string/enter_details"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_marginTop="@dimen/_40sdp"
                     android:textColor="@color/black"
                     android:layout_width="0dp"
@@ -112,8 +110,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:text="@string/statement_type"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -122,8 +120,8 @@
                     app:layout_constraintTop_toTopOf="@+id/tvStatementType"
                     app:layout_constraintStart_toEndOf="@+id/tvStatementType"
                     android:text="@string/detailed"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/black"
                     android:layout_marginStart="@dimen/_12sdp"
                     android:layout_width="wrap_content"
@@ -135,8 +133,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:text="@string/period"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -145,8 +143,8 @@
                     app:layout_constraintTop_toTopOf="@+id/tvStatementPeriod"
                     app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                     android:text="@string/specific_period"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -157,8 +155,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:text="@string/from_date"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -167,8 +165,8 @@
                     app:layout_constraintTop_toTopOf="@+id/tvFromDate"
                     app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                     android:text="@string/first_jan"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -180,8 +178,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:text="@string/to_date"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -191,8 +189,8 @@
                     app:layout_constraintTop_toTopOf="@+id/tvToDate"
                     app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                     android:text="@string/current_date"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -203,8 +201,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:text="@string/folio_listing"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -213,8 +211,8 @@
                     app:layout_constraintTop_toTopOf="@+id/tvFolioListing"
                     app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                     android:text="@string/with_zero_balance"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -225,8 +223,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:text="@string/email"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -234,11 +232,16 @@
                     android:id="@+id/tvEmail"
                     app:layout_constraintTop_toTopOf="@+id/tvLabelEmail"
                     app:layout_constraintStart_toStartOf="@+id/tvDetailed"
-                    android:text="mytestemail"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:text="mytestemail@gmail.com"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:lines="1"
                     android:textColor="@color/black"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_height="wrap_content"/>
 
                 <TextView
@@ -247,8 +250,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:text="@string/pan"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -257,8 +260,8 @@
                     app:layout_constraintTop_toTopOf="@+id/tvLabelPan"
                     app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                     android:text="ABCDFHKIK"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -269,8 +272,8 @@
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:text="@string/passwords"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -279,8 +282,8 @@
                     app:layout_constraintTop_toTopOf="@+id/tvLabelPassword"
                     app:layout_constraintStart_toStartOf="@+id/tvDetailed"
                     android:text="ABCDFHKIK"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -292,8 +295,8 @@
                      android:layout_width="0dp"
                      app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                      android:layout_marginTop="@dimen/_20sdp"
-                     android:fontFamily="@font/poppins"
-                     android:textSize="@dimen/_11ssp"
+                     android:fontFamily="@font/lato_regular"
+                     android:textSize="@dimen/_10ssp"
                      android:textColor="@color/black"
                      android:text="@string/once_you_get_email"
                      android:layout_height="wrap_content"/>
@@ -317,29 +320,40 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
-                    android:paddingBottom="@dimen/_10sdp"
                     android:id="@+id/tvForwardEmail"
                     app:layout_constraintTop_toBottomOf="@+id/tvOnceGetEmail"
                     android:layout_width="wrap_content"
                     app:layout_constraintStart_toStartOf="@+id/tvEnterDetails"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textSize="@dimen/_10ssp"
                     android:drawablePadding="@dimen/_4sdp"
                     android:textColor="@color/black"
                     android:drawableEnd="@drawable/ic_copy_purple"
                     android:text="@string/forward_email_to"
                     android:layout_height="wrap_content"/>
 
+                <View
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:id="@+id/viewBottom"
+                    app:layout_constraintTop_toBottomOf="@+id/tvForwardEmail"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:background="@color/auto_cancel"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_1sdp"/>
 
-
-
-
-
-
-
-
-
+                <TextView
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:id="@+id/tvStepCAS"
+                    app:layout_constraintTop_toBottomOf="@+id/viewBottom"
+                    android:text="@string/view_detailed_steps"
+                    android:textSize="@dimen/_11ssp"
+                    android:fontFamily="@font/lato_regular"
+                    android:textStyle="italic"
+                    android:paddingBottom="@dimen/_20sdp"
+                    android:textColor="@color/equity_fund_color"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -347,28 +361,7 @@
 
         </androidx.core.widget.NestedScrollView>
 
-        <View
-            android:layout_marginStart="@dimen/default_space"
-            android:layout_marginEnd="@dimen/default_space"
-            android:id="@+id/viewBottom"
-            app:layout_constraintBottom_toTopOf="@+id/tvStepCAS"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:background="@color/auto_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"/>
 
-        <TextView
-            android:layout_marginStart="@dimen/default_space"
-            android:id="@+id/tvStepCAS"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@string/view_detailed_steps"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/poppins"
-            android:textStyle="italic"
-            android:layout_marginBottom="@dimen/_20sdp"
-            android:textColor="@color/equity_fund_color"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
