--- a/app/src/main/res/layout/dialog_redeem_portfolio.xml
+++ b/app/src/main/res/layout/dialog_redeem_portfolio.xml
@@ -97,19 +97,18 @@
 
         <TextView
             android:id="@+id/tvCertificate"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_8"
-            android:text="Would you like to redeem by?"
+            android:text="Would you like to redeem by? Unit/Amount"
             android:textAllCaps="true"
+            android:layout_marginTop="@dimen/default_space"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintTop_toTopOf="@id/switchOnOff"
-            app:layout_constraintBottom_toBottomOf="@id/switchOnOff"
-            app:layout_constraintEnd_toStartOf="@+id/switchOnOff"
+            app:layout_constraintTop_toBottomOf="@+id/edtChooseFolio"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <ToggleButton
-            android:visibility="invisible"
+            android:visibility="gone"
             android:id="@+id/switchOnOff"
             android:layout_width="64dp"
             android:layout_height="24dp"
@@ -126,7 +125,7 @@
 
 
         <RadioGroup
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_4sdp"
             android:id="@+id/rgTicketType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -148,7 +147,7 @@
                 android:checked="true"
                 android:gravity="center"
                 android:padding="@dimen/_8sdp"
-                android:text="Units"
+                android:text="Unit"
                 android:textColor="@color/view_redeem_selector" />
 
             <RadioButton
@@ -160,7 +159,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:padding="@dimen/_8sdp"
-                android:text="Amounts"
+                android:text="Amount"
                 android:textColor="@color/view_redeem_selector" />
 
         </RadioGroup>
