--- a/app/src/main/res/layout/fragment_all_investmnet.xml
+++ b/app/src/main/res/layout/fragment_all_investmnet.xml
@@ -84,7 +84,7 @@
                     android:text="@string/redeem_disclaimer"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/notes_color"
-                    android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}" />
+                    android:visibility="gone" />
 
 
 
