--- a/app/src/main/res/layout/fragment_invest.xml
+++ b/app/src/main/res/layout/fragment_invest.xml
@@ -102,6 +102,7 @@
                                 tools:listitem="@layout/row_fund_type_list_item" />
 
                             <CheckBox
+                                android:visibility="gone"
                                 android:id="@+id/cbLevel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -117,6 +118,7 @@
                                 app:layout_constraintTop_toBottomOf="@+id/rvFundType" />
 
                             <androidx.recyclerview.widget.RecyclerView
+                                android:visibility="gone"
                                 android:id="@+id/rvRiskLevel"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
